🧹 Refactor